--- a/Basic_HTML_Website_Project/css/shared.css
+++ b/Basic_HTML_Website_Project/css/shared.css
@@ -4,6 +4,7 @@ html {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
